# D10.9_homework

./: README.md  fixture.json  manage.py  pyproject.toml  pytest.ini  requirements.txt
config/nginx/: D10.9_homework
config/systemd/: gunicorn.service  override.conf
core/: models.py  views.py
core/templates/: base.html  car_select.html
select_car/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_core.py
